# NewsBot

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
telegram_bot/: bot.py  tagesschau_feed.py
